[package]
name = "async-memcached-proto"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memcached_proto"

[dependencies]
futures-lite = "0.1"
bytes = "0.5"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
async-trait = "0.1"
thiserror = "1.0"
semver = "0.10"
