[package]
name = "async-memcached-proto"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memcached_proto"

[dependencies]
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.5"
futures-lite = "0.1"
num-derive = "0.3"
num-traits = "0.2"
semver = "0.10"
thiserror = "1.0"
tracing = "0.1"
fastrand = "1.3"